# FractalSig

./: .gitignore  LICENSE  README.md  environment.yaml  main.py  pyproject.toml  requirements.txt  setup_wsl.sh
.github/workflows/: ci.yml
SigDiffusions/: .gitignore  README.md  compute_signatures.py  data_loading_utils.py  invert_signatures.py  main.py  model.py  ode_lib.py  requirements.txt  sample.py  train.py  training_utils.py
SigDiffusions/config/: exchange_rates.yaml  hepc.yaml  predator_prey.yaml  sines.yaml  weather.yaml
SigDiffusions/evaluation/: discriminative_metrics.py  evaluation.ipynb  metric_utils.py  predictive_metrics.py
SigDiffusions/signature_inversion_utils/: fourier_inversion.py  free_lie_algebra.py
conf/: config.yaml
conf/profile/: cluster.yaml  (+1 more)
docs/: triage_2026-05-03.md
fractalsig/: __init__.py  data_gen.py  decoder.py  losses.py  registries.py  seeding.py  train_decoder.py
notebooks/: 00_The_Gibbs_Problem.ipynb  01_Architecture_FractalDecoder.ipynb  03_FractalSig_Validation.ipynb  04_FractalSig_Metrics.ipynb  utils_plots.py  validation.py
scripts/: download_datasets.py  download_eeg.py  download_esc50.py  generate_cover.py  generate_figure.py  merge_notebooks.py  patch_metrics_notebook.py  verify_decoding.py  verify_validation.py
tests/: conftest.py  test_audio.py  test_data_gen.py  test_decoder.py  test_eeg.py  test_invert_sigs.py  test_losses.py  test_registries.py  test_seeding.py  test_signatures.py  test_sp500.py  test_sweep_runner.py  test_synthetic_fbm.py  test_train_decoder.py  test_train_runner.py  test_turbulence.py
(+9 files in other folders)
